working bioreports with sample report and lots of css and js

--- a/dashboard.html
+++ b/dashboard.html
@@ -26,3 +26,8 @@ title:
   </tbody>
 </table>
 
+<h1>Labs</h1>
+{% for category in site.categories %}
+<li><a href="/{{ site.category_dir }}/{{ category[0] | replace:' ', '-' | downcase  }}">{{ category[0] }}</a></li>
+{% endfor %}
+
