--- a/index.html
+++ b/index.html
@@ -1,28 +1,10 @@
 ---
 layout: default
+d3: true
+js: index_script.js
 title: 
 ---
-<h1>Projects</h1>
-<table cellpadding="0" cellspacing="0" border="0" class="data_table display" id="projects_table">
-  <thead>
-    <tr>
-      <td>Name</td>
-      <td>PI</td>
-      <td>Researcher</td>
-      <td>Analyst</td>
-      <td>Date Created</td>
-    </tr>
-  </thead>
-  <tbody>
-  {% for post in site.posts %}
-  <tr>
-    <td><a href="{{ post.url}}"> {{ post.title }}</a></td>
-    <td>{{ post.pi }}</td>
-    <td>{{ post.researcher }}</td>
-    <td>{{ post.analyst }}</td>
-    <td>{{ post.date | date_to_string }}</td>
-  </tr>
-{% endfor %}
-  </tbody>
-</table>
+<h1>Project Timeline</h1>
+
+<div id="vis"></div>
 
