--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -16,7 +16,7 @@ title:
   <tbody>
   {% for post in site.posts %}
   <tr>
-    <td><a href="{{ post.url}}"> {{ post.title }}</a></td>
+    <td><a href="{{ post.url}}"> {{ post.title | truncate:80 }}</a></td>
     <td>{{ post.pi }}</td>
     <td>{{ post.researcher }}</td>
     <td>{{ post.analyst }}</td>
