rename to data_grid

--- a/data_grid.html
+++ b/data_grid.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 d3: true
-js: data_view_script.js
-css: data_view.css
+js: data_grid.js
+css: data_grid.css
 title: 
 ---
 <h1>Data</h1>
