working data_grid

--- a/data_grid.html
+++ b/data_grid.html
@@ -6,7 +6,7 @@ css: data_grid.css
 title: 
 ---
 <h1>Data</h1>
-<a class="btn copy" id="copy_data_grid" href="#">Copy To Clipboard</a>
+<!-- <a class="btn copy" id="copy_data_grid" href="#">Copy To Clipboard</a> -->
 
 <div id="data_grid"></div>
 
