change copy button css

--- a/data_grid.html
+++ b/data_grid.html
@@ -5,8 +5,8 @@ js: data_grid.js
 css: data_grid.css
 title: 
 ---
+<a class="btn copy" id="copy_data_grid" href="#">Copy To Clipboard</a>
 <h1>Data</h1>
-<!-- <a class="btn copy" id="copy_data_grid" href="#">Copy To Clipboard</a> -->
 
-<div id="data_grid"></div>
+<div id="data_grid"><img src="imgs/loading.gif"/></div>
 
