--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,32 +4,6 @@ title:
 js: dashboard.js
 ---
 <h1>Projects</h1>
-<table cellpadding="0" cellspacing="0" border="0" class="data_table display" id="projects_table">
-  <thead>
-    <tr>
-      <td>Name</td>
-      <td>PI</td>
-      <td>Researcher</td>
-      <td>Analyst</td>
-      <td>Date Created</td>
-    </tr>
-  </thead>
-  <tbody>
-    {% assign overviews = site.post_data["type"]["overview"] | map: 'url' %}
-
-    {% for post in site.posts %}
-      {% unless overviews contains post.url %}
-        <tr>
-          <td><a href="{{ post.url}}"> {{ post.title | truncate:80 }}</a></td>
-          <td>{{ post.pi }}</td>
-          <td>{{ post.researcher }}</td>
-          <td>{{ post.analyst }}</td>
-          <td>{{ post.date | date_to_string }}</td>
-        </tr>
-  {% endunless %}
-{% endfor %}
-  </tbody>
-</table>
 
 <div class="row">
   <div class="span4">
@@ -65,7 +39,35 @@ js: dashboard.js
       {% endfor %}
     </div>
   </div>
+</div>
 
+<div class="row">
+<table cellpadding="0" cellspacing="0" border="0" class="data_table display" id="projects_table">
+  <thead>
+    <tr>
+      <td>Name</td>
+      <td>PI</td>
+      <td>Researcher</td>
+      <td>Analyst</td>
+      <td>Date Created</td>
+    </tr>
+  </thead>
+  <tbody>
+    {% assign overviews = site.post_data["type"]["overview"] | map: 'url' %}
+
+    {% for post in site.posts %}
+      {% unless overviews contains post.url %}
+        <tr>
+          <td><a href="{{ post.url}}"> {{ post.title | truncate:80 }}</a></td>
+          <td>{{ post.pi }}</td>
+          <td>{{ post.researcher }}</td>
+          <td>{{ post.analyst }}</td>
+          <td>{{ post.date | date_to_string }}</td>
+        </tr>
+  {% endunless %}
+{% endfor %}
+  </tbody>
+</table>
 </div>
 
 <div class="row">
